# fs-proxy

./: Cargo.toml  dockerfile
res/: mapping-tree.json  mapping-tree.staging.json  mapping.json
src/: args.rs  inode.rs  main.rs  mapping.rs
