[package]
name = "fs-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuser = "0.12.0"
clap = { version = "4.3.0", features = ["cargo", "derive"] }
libc = "0.2.101"
env_logger = "0.10.0"
prost-build = "0.11.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["rt-multi-thread", "macros", "time", "fs", "io-util", "sync"] }
log = "0.4.18"